syntax = "proto3";

package invitations.messages.v1;

import "buf/validate/validate.proto";

option go_package = "messages/v1";

message AcceptInvitationRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];
}
